--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
         steps:
             - uses: actions/checkout@master
             - name: Switch XCode Version
-              run: sudo xcode-select -s /Applications/Xcode_11.app
+              run: sudo xcode-select -s /Applications/Xcode.app
             - name: Install Dependences
               run: |
                   cd Example
