--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ jobs:
 
         steps:
             - uses: actions/checkout@master
+            - uses: maxim-lobanov/setup-xcode@v1
+              with:
+                  xcode-version: latest-stable
             - uses: sersoft-gmbh/xcodebuild-action@v3
               with:
                   spm-package: "./"
