--- a/Example/CommandBarIOS/Info.plist
+++ b/Example/CommandBarIOS/Info.plist
@@ -18,14 +18,21 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>commandbar</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -35,5 +42,22 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
+  <key>UIApplicationSceneManifest</key>
+  <dict>
+      <key>UIApplicationSupportsMultipleScenes</key>
+      <false/>
+      <key>UISceneConfigurations</key>
+      <dict>
+          <key>UIWindowSceneSessionRoleApplication</key>
+          <array>
+              <dict>
+                  <key>UISceneConfigurationName</key>
+                  <string>Default Configuration</string>
+                  <key>UISceneDelegateClassName</key>
+                  <string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+              </dict>
+          </array>
+      </dict>
+    </dict>
 </dict>
 </plist>
