chore: add Open HelpHub button to test app

--- a/Example/CommandBarIOS/Info.plist
+++ b/Example/CommandBarIOS/Info.plist
@@ -31,6 +31,28 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
+		<key>UISceneConfigurations</key>
+		<dict>
+			<key>UIWindowSceneSessionRoleApplication</key>
+			<array>
+				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+				</dict>
+			</array>
+		</dict>
+	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -42,22 +64,5 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
-  <key>UIApplicationSceneManifest</key>
-  <dict>
-      <key>UIApplicationSupportsMultipleScenes</key>
-      <false/>
-      <key>UISceneConfigurations</key>
-      <dict>
-          <key>UIWindowSceneSessionRoleApplication</key>
-          <array>
-              <dict>
-                  <key>UISceneConfigurationName</key>
-                  <string>Default Configuration</string>
-                  <key>UISceneDelegateClassName</key>
-                  <string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-              </dict>
-          </array>
-      </dict>
-    </dict>
 </dict>
 </plist>
